--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -43,10 +43,10 @@
   },
   "MailingSettings": {
     "EmailsNameSpace": "FRITeam.Swapify.Backend.Emails",
-    "SMTPServer": "smtp_server@email.toberemoved.com",
+    "SMTPServer": "SERVER@TOBEREMOVED.COM",
     "SMTPPort": "465",
     "Username": "##MAIL_USERNAME##",
-    "SenderEmail": "sender.toberemoved@email.com",
+    "SenderEmail": "SENDER@TOBEREMOVED.COM",
     "SenderDisplayName": "Swapify",
     "Password": "##MAIL_PASSWORD##",
     "FeedbackEmail": "##FEEDBACK_MAIL##"
