--- a/WebAPI/appsettings.Production.json
+++ b/WebAPI/appsettings.Production.json
@@ -23,7 +23,7 @@
 	"Port": "636"
   },
   "PathSettings": {
-    "CoursesJsonPath": "/app/FixedDB/courses_2020_1_29.json",
+    "CoursesJsonPath": "/app/courses_2020_1_29.json",
     "WwwRootPath": "wwwroot"
   }
 }
