--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -8,7 +8,7 @@ services:
   container_name: swapify
   volumes:   
    - ./logs:/app/logs
-   - ./FixedDB:/app/FixedDB/courses_2020_1_29.json
+   - ./FixedDB/courses_2020_1_29.json:/app/courses_2020_1_29.json
   restart: unless-stopped
   expose:
    - 5020   
