--- a/WebApp/Dockerfile
+++ b/WebApp/Dockerfile
@@ -1,6 +1,6 @@
 FROM node AS react-build
-WORKDIR /app/WebApp
-COPY . .
+WORKDIR /react
+COPY ./WebApp ./
 RUN npm install -g npm@6.14.11
 RUN npm install
 RUN npm run build:CI
