--- a/WebAPI/WebAPI.csproj
+++ b/WebAPI/WebAPI.csproj
@@ -58,10 +58,7 @@
   <ItemGroup>
     <ProjectReference Include="..\APIWrapper\APIWrapper.csproj" />
     <ProjectReference Include="..\Backend\Backend.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Entities\SwapifyBase.csproj" />
+    <ProjectReference Include="..\SwapifyBase\SwapifyBase.csproj" />
   </ItemGroup>
 
   <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JSONSchema="" /></VisualStudio></ProjectExtensions>
