--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -56,5 +56,11 @@
   "RecaptchaSettings": {
     "PrivateKey": "6LeJhgIaAAAAANEP4LvIQo25l4AReIwyWnfq0VXX",
     "URL": "https://www.google.com/recaptcha/api/siteverify"
+  },
+  "CalendarSettings": {
+    "StartWinter": "2021-09-27T00:00:00.000000",
+    "EndWinter": "2021-12-22T00:00:00.000000",
+    "StartSummer": "2022-02-21T00:00:00.000000",
+    "EndSummer": "2022-05-20T00:00:00.000000"
   }
 }
