--- a/WebAPI/nlog.Production.config
+++ b/WebAPI/nlog.Production.config
@@ -8,8 +8,11 @@
   <!-- https://github.com/nlog/NLog/wiki/Configuration-file -->
   <targets>
     <target xsi:type="File" name="file" fileName="/app/logs/${shortdate}.log"
-            layout="${longdate}|${level:uppercase=true}|${logger}|${message}" />
-  </targets>
+            layout="${longdate}|${level:uppercase=true}|${logger}|${message}"
+			archiveFileName="/app/logs/archive/${shortdate}.log"
+			maxArchiveFiles="14"
+			archiveEvery="Day"
+	/></targets>
   <rules>
     <logger name="*" minlevel="Info" writeTo="file" />
     <!--Skip non-critical Microsoft logs-->
