Fixed_nlog_config_and_updated_dependecies

--- a/WebAPI/nlog.Production.config
+++ b/WebAPI/nlog.Production.config
@@ -8,10 +8,9 @@
   <!-- https://github.com/nlog/NLog/wiki/Configuration-file -->
   <targets>
     <target xsi:type="File" name="file" fileName="/app/logs/${shortdate}.log"
-            layout="${longdate}|${level:uppercase=true}|${logger}|${message}"
-			archiveFileName="/app/logs/archive/${shortdate}.log"
-			maxArchiveFiles="14"
-			archiveEvery="Day"
+            layout="${longdate}|${level:uppercase=true}|${logger}|${message}"			
+			maxArchiveDays="14"
+			archiveAboveSize="10240"
 	/></targets>
   <rules>
     <logger name="*" minlevel="Info" writeTo="file" />
