File_was_too_small

--- a/WebAPI/nlog.Production.config
+++ b/WebAPI/nlog.Production.config
@@ -10,7 +10,7 @@
     <target xsi:type="File" name="file" fileName="/app/logs/${shortdate}.log"
             layout="${longdate}|${level:uppercase=true}|${logger}|${message}"			
 			maxArchiveDays="14"
-			archiveAboveSize="10240"
+			archiveAboveSize="10000240"
 	/></targets>
   <rules>
     <logger name="*" minlevel="Info" writeTo="file" />
