--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -210,7 +210,8 @@
     },
     "globals": {},
     "rules": {
-      "react/prop-types": "off"
+      "react/prop-types": "off",
+      "no-console": "off"
     }
   }
 }
