--- a/APIWrapper/APIWrapper.csproj
+++ b/APIWrapper/APIWrapper.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
 	  <PackageReference Include="NLog.Web.AspNetCore" Version="4.9.3" />
     <PackageReference Include="NLog" Version="4.7.13" />
+    <PackageReference Include="RestSharp" Version="107.1.1" />
     <PackageReference Include="SonarAnalyzer.CSharp" Version="7.10.0.7896">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
