--- a/.github/workflows/github_autodeploy_action.yml
+++ b/.github/workflows/github_autodeploy_action.yml
@@ -74,7 +74,7 @@ jobs:
      with:
       context: .      
       push: true
-      tags: swapifyapp/swapify-app
+      tags: swapifyapp/swapify-app:Production
    - name: Configure SSH and prepare files to be copied
      run: |
           mkdir -p ~/.ssh/
@@ -109,11 +109,11 @@ jobs:
         sudo cat /home/ubuntu/Swapify/mypassfile.txt | sudo docker login --username swapifyapp --password-stdin docker.io;        
         sudo rm /home/ubuntu/Swapify/mypassfile.txt;
         sudo chmod +x init-letsencrypt.sh;
-        sudo docker-compose down;
+        sudo docker-compose down;  #
         sudo docker rmi swapify-app -f;
-        sudo docker rmi swapifyapp/swapify-app -f;
+        sudo docker rmi swapifyapp/swapify-app:Production -f;    #dopisat TAG
         sudo docker system prune -f;
-        sudo docker pull swapifyapp/swapify-app;
+        sudo docker pull swapifyapp/swapify-app:Production;    #dopisat TAG
         sudo docker tag swapifyapp/swapify-app swapify-app;
         sudo docker-compose up -d;
         sudo docker logout;'         
