testing staging autodeploy
test

--- a/.github/workflows/github_autodeploy_action_stage.yml
+++ b/.github/workflows/github_autodeploy_action_stage.yml
@@ -2,8 +2,9 @@ name: Deploy to AWS ECS
 on:
  push:
   branches:
-   - develop    
-   
+   - staing
+   - testing-staging 
+
 env:
  ASPNETCORE_ENVIRONMENT: Production
 jobs:  
