--- a/.github/workflows/github_autodeploy_action.yml
+++ b/.github/workflows/github_autodeploy_action.yml
@@ -2,7 +2,7 @@ name: Deploy to AWS ECS
 on:
  push:
   branches:
-   - develop   
+   - develop
 
 env:
  ASPNETCORE_ENVIRONMENT: Production
@@ -109,11 +109,11 @@ jobs:
         sudo cat /home/ubuntu/Swapify/mypassfile.txt | sudo docker login --username swapifyapp --password-stdin docker.io;        
         sudo rm /home/ubuntu/Swapify/mypassfile.txt;
         sudo chmod +x init-letsencrypt.sh;
-        sudo docker-compose down;  #
+        sudo docker-compose down;
         sudo docker rmi swapify-app -f;
-        sudo docker rmi swapifyapp/swapify-app:Production -f;    #dopisat TAG
+        sudo docker rmi swapifyapp/swapify-app:Production -f;
         sudo docker system prune -f;
-        sudo docker pull swapifyapp/swapify-app:Production;    #dopisat TAG
+        sudo docker pull swapifyapp/swapify-app:Production;
         sudo docker tag swapifyapp/swapify-app swapify-app;
         sudo docker-compose up -d;
-        sudo docker logout;'         
+        sudo docker logout;'
