--- a/docker-compose.stage.yml
+++ b/docker-compose.stage.yml
@@ -23,16 +23,16 @@ services:
   links:
    - mongodb
  mongodb:
-  image: mongo
+  image: mongo-stage
   container_name: mongodb-stg
   volumes:
    - ./data_stg:/data/db
  nginx:
   restart: unless-stopped
-  image: nginx
+  image: nginx-stage
   container_name: nginx-stg
   volumes:
-   - ./nginx.conf:/etc/nginx/conf.d/default.conf
+   - ./nginx_stg.conf:/etc/nginx/conf.d/default.conf
    - ./certbot/conf:/etc/letsencrypt
    - ./certbot/www:/var/www/certbot
   ports:
