--- a/nginx_stg.conf
+++ b/nginx_stg.conf
@@ -21,7 +21,7 @@ server {
 	ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 	
 	location / {
-		proxy_pass http://swapify:5020;
+		proxy_pass http://swapify-stg:5020;
 		proxy_http_version 1.1;
 		proxy_set_header	X-Real-IP	$remote_addr;
 		proxy_set_header	Upgrade	$http_upgrade;
