--- a/docker-compose.stage.yml
+++ b/docker-compose.stage.yml
@@ -8,7 +8,7 @@ services:
   container_name: swapify-stg
   volumes:   
    - ./logs_stg:/app/logs
-   - ./FixedDB/courses_2020_1_29.json:/app/courses_2020_1_29.json
+   - ./../Swapify/FixedDB/courses_2020_1_29.json:/app/courses_2020_1_29.json
   restart: unless-stopped
   expose:
    - 5020   
@@ -33,8 +33,8 @@ services:
   container_name: nginx-stg
   volumes:
    - ./nginx_stg.conf:/etc/nginx/conf.d/default.conf
-   - ./certbot/conf:/etc/letsencrypt
-   - ./certbot/www:/var/www/certbot
+   - ./../Swapify/certbot/conf:/etc/letsencrypt
+   - ./../Swapify/certbot/www:/var/www/certbot
   ports:
    - 81:80
    - 444:443
@@ -42,6 +42,6 @@ services:
  certbot-stg:
   image: certbot/certbot
   volumes:
-   - ./certbot/conf:/etc/letsencrypt
-   - ./certbot/www:/var/www/certbot
+   - ./../Swapify/certbot/conf:/etc/letsencrypt
+   - ./../Swapify/certbot/www:/var/www/certbot
   entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
