--- a/.github/workflows/github_autodeploy_action.yml
+++ b/.github/workflows/github_autodeploy_action.yml
@@ -74,7 +74,7 @@ jobs:
      with:
       context: .      
       push: true
-      tags: swapifyapp/swapify-app:Production
+      tags: swapifyapp/swapify-app:production
    - name: Configure SSH and prepare files to be copied
      run: |
           mkdir -p ~/.ssh/
@@ -111,9 +111,9 @@ jobs:
         sudo chmod +x init-letsencrypt.sh;
         sudo docker-compose down;
         sudo docker rmi swapify-app -f;
-        sudo docker rmi swapifyapp/swapify-app:Production -f;
+        sudo docker rmi swapifyapp/swapify-app:production -f;
         sudo docker system prune -f;
-        sudo docker pull swapifyapp/swapify-app:Production;
+        sudo docker pull swapifyapp/swapify-app:production;
         sudo docker tag swapifyapp/swapify-app swapify-app;
         sudo docker-compose up -d;
         sudo docker logout;'
