--- a/.github/workflows/github_autodeploy_action_stage.yml
+++ b/.github/workflows/github_autodeploy_action_stage.yml
@@ -74,7 +74,7 @@ jobs:
      with:
       context: .      
       push: true
-      tags: swapifyapp/swapify-app:Stage
+      tags: swapifyapp/swapify-app:stage
    - name: Configure SSH and prepare files to be copied
      run: |
           mkdir -p ~/.ssh/
@@ -111,9 +111,9 @@ jobs:
         sudo chmod +x init-letsencrypt.sh;
         sudo docker-compose -f docker-compose.stage.yml down;
         sudo docker rmi swapify-app-stage -f;
-        sudo docker rmi swapifyapp/swapify-app:Stage -f;
+        sudo docker rmi swapifyapp/swapify-app:stage -f;
         sudo docker system prune -f;
-        sudo docker pull swapifyapp/swapify-app:Stage;
+        sudo docker pull swapifyapp/swapify-app:stage;
         sudo docker tag swapifyapp/swapify-app swapify-app-stage;
         sudo docker-compose -f docker-compose.stage.yml up -d;
         sudo docker logout;'
