--- a/WebAPI/appsettings.Development.json
+++ b/WebAPI/appsettings.Development.json
@@ -1,8 +1,8 @@
 {
   "LdapSettings": {
     "SecureSocketLayer": "false",
-    "BaseDN": "DC=fri,DC=uniza,DC=sk",
-    "HostName": "ldapbdc.fri.uniza.sk",
+    "BaseDN": "DC=uniza,DC=sk",
+    "HostName": "dc3.uniza.sk",
     "Port": "389"
   },
   "Logging": {
