--- a/WebAPI/appsettings.Production.json
+++ b/WebAPI/appsettings.Production.json
@@ -18,9 +18,9 @@
   },
   "LdapSettings": {
     "SecureSocketLayer": "true",
-	"BaseDN": "DC=fri,DC=uniza,DC=sk",
-	"HostName": "ldapbdc.fri.uniza.sk",
-	"Port": "636"
+    "BaseDN": "DC=uniza,DC=sk",
+    "HostName": "dc3.uniza.sk",
+    "Port": "636"
   },
   "PathSettings": {
     "CoursesJsonPath": "/app/courses_2020_1_29.json",
