IntegrationTest run in github actions

--- a/.github/workflows/github_actions.yml
+++ b/.github/workflows/github_actions.yml
@@ -22,12 +22,15 @@ jobs:
     - name: 4. Run BackendTest
       run: dotnet test Tests/BackendTest/BackendTest.csproj
     
-    - name: 5. Setup node
+    - name: 5. Run IntegrationTest
+      run: dotnet test Tests/IntegrationTest/IntegrationTest.csproj
+    
+    - name: 6. Setup node
       uses: actions/setup-node@v1
       with:
         node-version: 12.11.1
     
-    - name: 6. npm install
+    - name: 7. npm install
       run: |
         cd WebApp
         npm install
