--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -31,99 +31,99 @@
   "author": "fri-team",
   "license": "MIT",
   "dependencies": {
-    "@emotion/core": "^10.0.27",
-    "@material-ui/core": "^4.8.0",
-    "@material-ui/icons": "^4.5.1",
-    "axios": "^0.18.0",
-    "classnames": "^2.2.5",
-    "connected-react-router": "^6.6.1",
-    "downshift": "^3.2.10",
-    "lodash": "^4.17.5",
+    "@emotion/core": "^10.3.1",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "axios": "^0.26.1",
+    "classnames": "^2.3.1",
+    "connected-react-router": "^6.9.2",
+    "downshift": "^3.4.8",
+    "lodash": "^4.17.21",
     "material-auto-rotating-carousel": "^3.0.2",
-    "material-color-hash": "^0.1.4",
+    "material-color-hash": "^0.1.6",
     "mlcm": "0.0.3",
-    "object-assign": "4.1.0",
-    "react": "^16.8.3",
+    "object-assign": "4.1.1",
+    "react": "^16.14.0",
     "react-color": "^2.19.3",
-    "react-dom": "^16.8.3",
+    "react-dom": "^16.14.0",
     "react-google-recaptcha": "^2.1.0",
-    "react-onclickoutside": "^6.7.1",
-    "react-pdf": "^4.1.0",
-    "react-redux": "^7.1.3",
-    "react-router-dom": "^5.1.2",
-    "react-router-redux": "5.0.0-alpha.6",
-    "react-slideshow-image": "^1.2.0",
-    "react-spinners": "^0.8.0",
-    "react-swipeable-views": "^0.13.8",
-    "redux": "^4.0.0",
-    "redux-auth-wrapper": "^2.0.3",
-    "redux-persist": "^6.0.0-pre2.1",
+    "react-onclickoutside": "^6.12.1",
+    "react-pdf": "^4.2.0",
+    "react-redux": "^7.2.8",
+    "react-router-dom": "^5.3.0",
+    "react-router-redux": "5.0.0-alpha.8",
+    "react-slideshow-image": "^1.5.3",
+    "react-spinners": "^0.11.0",
+    "react-swipeable-views": "^0.14.0",
+    "redux": "^4.1.2",
+    "redux-auth-wrapper": "^2.1.0",
+    "redux-persist": "^6.0.0",
     "redux-persist-transform-encrypt": "^2.0.1",
     "redux-saga": "^0.16.2",
-    "redux-thunk": "2.1.0",
-    "styled-components": "^4.0.3",
+    "redux-thunk": "2.4.1",
+    "styled-components": "^4.4.1",
     "text-transform": "^0.1.2",
-    "throttle-debounce": "^2.1.0",
-    "validator": "^10.8.0"
+    "throttle-debounce": "^2.3.0",
+    "validator": "^10.11.0"
   },
   "devDependencies": {
-    "autoprefixer": "7.1.4",
-    "babel-cli": "6.24.1",
-    "babel-core": "6.25.0",
+    "autoprefixer": "7.2.6",
+    "babel-cli": "6.26.0",
+    "babel-core": "6.26.3",
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
-    "babel-loader": "7.1.1",
+    "babel-loader": "7.1.5",
     "babel-plugin-transform-react-constant-elements": "6.23.0",
-    "babel-plugin-transform-react-remove-prop-types": "0.4.6",
-    "babel-polyfill": "6.23.0",
-    "babel-preset-env": "1.6.0",
+    "babel-plugin-transform-react-remove-prop-types": "0.4.24",
+    "babel-polyfill": "6.26.0",
+    "babel-preset-env": "1.7.0",
     "babel-preset-react": "6.24.1",
     "babel-preset-react-hmre": "1.1.1",
     "babel-preset-stage-1": "6.24.1",
-    "browser-sync": "2.26.3",
-    "chalk": "2.0.1",
-    "concurrently": "3.5.0",
-    "connect-history-api-fallback": "1.3.0",
-    "coveralls": "3.0.2",
-    "css-loader": "0.28.7",
-    "enzyme": "3.0.0",
-    "enzyme-adapter-react-16": "1.0.0",
-    "eslint": "4.2.0",
-    "eslint-plugin-import": "2.7.0",
-    "eslint-plugin-react": "7.3.0",
-    "eslint-watch": "3.1.2",
+    "browser-sync": "2.27.9",
+    "chalk": "2.4.2",
+    "concurrently": "3.6.1",
+    "connect-history-api-fallback": "1.6.0",
+    "coveralls": "3.1.1",
+    "css-loader": "0.28.11",
+    "enzyme": "3.11.0",
+    "enzyme-adapter-react-16": "1.15.6",
+    "eslint": "4.19.1",
+    "eslint-plugin-import": "2.25.4",
+    "eslint-plugin-react": "7.29.4",
+    "eslint-watch": "3.1.5",
     "extract-text-webpack-plugin": "3.0.1",
     "file-loader": "0.11.2",
-    "history": "4.6.0",
+    "history": "4.10.1",
     "html-webpack-plugin": "2.29.0",
-    "http-proxy-middleware": "0.19.0",
+    "http-proxy-middleware": "0.21.0",
     "identity-obj-proxy": "3.0.0",
     "jest": "23.6.0",
     "jest-cli": "23.6.0",
-    "json-loader": "0.5.4",
+    "json-loader": "0.5.7",
     "lodash-loader": "2.0.0",
-    "mockdate": "2.0.1",
-    "node": "8.9.4",
-    "node-sass": "4.10.0",
+    "mockdate": "2.0.5",
+    "node": "8.17.0",
+    "node-sass": "4.14.1",
     "opn-cli": "3.1.0",
-    "postcss-loader": "2.0.6",
-    "prompt": "1.0.0",
-    "prop-types": "15.5.10",
-    "raf": "3.3.2",
-    "react-hot-loader": "3.0.0-beta.6",
-    "react-test-renderer": "16.0.0",
-    "redux-immutable-state-invariant": "2.0.0",
-    "redux-mock-store": "1.3.0",
-    "replace": "1.0.0",
-    "rimraf": "2.6.1",
-    "sass-loader": "6.0.6",
-    "style-loader": "0.19.0",
+    "postcss-loader": "2.1.6",
+    "prompt": "1.2.2",
+    "prop-types": "15.8.1",
+    "raf": "3.4.1",
+    "react-hot-loader": "3.1.3",
+    "react-test-renderer": "16.14.0",
+    "redux-immutable-state-invariant": "2.1.0",
+    "redux-mock-store": "1.5.4",
+    "replace": "1.2.1",
+    "rimraf": "2.7.1",
+    "sass-loader": "6.0.7",
+    "style-loader": "0.23.1",
     "url-loader": "1.1.2",
-    "webpack": "3.1.0",
-    "webpack-bundle-analyzer": "3.0.3",
-    "webpack-dev-middleware": "1.11.0",
-    "webpack-hot-middleware": "2.18.2",
-    "webpack-md5-hash": "0.0.5"
+    "webpack": "3.12.0",
+    "webpack-bundle-analyzer": "3.9.0",
+    "webpack-dev-middleware": "1.12.2",
+    "webpack-hot-middleware": "2.25.1",
+    "webpack-md5-hash": "0.0.6"
   },
   "keywords": [],
   "repository": {
