--- a/WebAPI/appsettings.DevelopmentVS.json
+++ b/WebAPI/appsettings.DevelopmentVS.json
@@ -1,5 +1,7 @@
 {
   "LdapSettings": {
+    "AlternativMailPrefix": "@fri.uniza.sk",
+    "MailPrefix": "@stud.uniza.sk",
     "SecureSocketLayer": "false",
     "BaseDN": "DC=uniza,DC=sk",
     "HostName": "dc3.uniza.sk",
