--- a/WebAPI/appsettings.Production.json
+++ b/WebAPI/appsettings.Production.json
@@ -17,6 +17,8 @@
     "DatabaseName": "SwapifyDB"
   },
   "LdapSettings": {
+    "AlternativMailPrefix": "@fri.uniza.sk",
+    "MailPrefix": "@stud.uniza.sk",
     "SecureSocketLayer": "true",
     "BaseDN": "DC=uniza,DC=sk",
     "HostName": "dc3.uniza.sk",
