--- a/WebAPI/appsettings.integrationtest.json
+++ b/WebAPI/appsettings.integrationtest.json
@@ -78,6 +78,8 @@
 
 
   "LdapSettings": {
+    "AlternativMailPrefix": "@fri.uniza.sk",
+    "MailPrefix": "@stud.uniza.sk",
     "SecureSocketLayer": "false",
     "BaseDN": "DC=fri,DC=uniza,DC=sk",
     "HostName": "ldapbdc.fri.uniza.sk",
