--- a/WebAPI/appsettings.DevelopmentVS.json
+++ b/WebAPI/appsettings.DevelopmentVS.json
@@ -14,7 +14,7 @@
     }
   },
   "PathSettings": {
-    "CoursesJsonPath": "..\\Tests\\FixedDB\\courses_2022_5_19.json",
+    "CoursesJsonPath": "..\\Tests\\FixedDB\\Course.json",
     "WwwRootPath": "wwwroot"
   },
   "SwapifyDatabaseSettings": {
