--- a/WebAPI/appsettings.integrationtest.json
+++ b/WebAPI/appsettings.integrationtest.json
@@ -84,7 +84,7 @@
     "Port": "389"
   },
   "PathSettings": {
-    "CoursesJsonPath": "/Tests/FixedDB/courses_2022_5_19.json",
+    "CoursesJsonPath": "/Tests/FixedDB/Course.json",
     "WwwRootPath": "/app/wwwroot"
   },
   "SwapifyDatabaseSettings": {
