--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -8,7 +8,7 @@ services:
   container_name: swapify
   volumes:   
    - ./logs:/app/logs
-   - ./FixedDB/courses_2022_5_19.json:/app/courses_2022_5_19.json
+   - ./FixedDB/Course.json:/app/Course.json
   restart: unless-stopped
   expose:
    - 5020   
