Changed name of resource back to origin
i changed it by accident before

--- a/WebAPI/appsettings.integrationtest.json
+++ b/WebAPI/appsettings.integrationtest.json
@@ -84,7 +84,7 @@
     "Port": "389"
   },
   "PathSettings": {
-    "CoursesJsonPath": "/Tests/FixedDB/Course.json",
+    "CoursesJsonPath": "/Tests/FixedDB/courses_2022_9_15.json",
     "WwwRootPath": "/app/wwwroot"
   },
   "SwapifyDatabaseSettings": {
