--- a/WebAPI/appsettings.Development.json
+++ b/WebAPI/appsettings.Development.json
@@ -14,7 +14,7 @@
     }
   },
   "PathSettings": {
-    "CoursesJsonPath": "/Tests/FixedDB/Course.json",
+    "CoursesJsonPath": "/Tests/FixedDB/courses_2022_9_15.json",
     "WwwRootPath": "/app/wwwroot"
   },
   "SwapifyDatabaseSettings": {
