--- a/WebAPI/appsettings.DevelopmentVS.json
+++ b/WebAPI/appsettings.DevelopmentVS.json
@@ -1,10 +1,8 @@
 {
   "LdapSettings": {
-    "AlternativMailPrefix": "@fri.uniza.sk",
-    "MailPrefix": "@stud.uniza.sk",
     "SecureSocketLayer": "false",
-    "BaseDN": "DC=uniza,DC=sk",
-    "HostName": "dc3.uniza.sk",
+    "BaseDN": "DC=fri,DC=uniza,DC=sk",
+    "HostName": "ldapbdc.fri.uniza.sk",
     "Port": "389"
   },
   "Logging": {
