--- a/WebAPI/appsettings.Production.json
+++ b/WebAPI/appsettings.Production.json
@@ -17,12 +17,10 @@
     "DatabaseName": "SwapifyDB"
   },
   "LdapSettings": {
-    "AlternativMailPrefix": "@fri.uniza.sk",
-    "MailPrefix": "@stud.uniza.sk",
     "SecureSocketLayer": "true",
-    "BaseDN": "DC=uniza,DC=sk",
-    "HostName": "dc3.uniza.sk",
-    "Port": "636"
+	"BaseDN": "DC=fri,DC=uniza,DC=sk",
+	"HostName": "ldapbdc.fri.uniza.sk",
+	"Port": "636"
   },
   "PathSettings": {
     "CoursesJsonPath": "/app/courses_2020_1_29.json",
