--- a/WebAPI/appsettings.Development.json
+++ b/WebAPI/appsettings.Development.json
@@ -1,9 +1,9 @@
 {
   "LdapSettings": {
-    "SecureSocketLayer": "true",
-	"BaseDN": "DC=fri,DC=uniza,DC=sk",
-	"HostName": "ldapbdc.fri.uniza.sk",
-	"Port": "636"
+    "SecureSocketLayer": "false",
+    "BaseDN": "DC=fri,DC=uniza,DC=sk",
+    "HostName": "ldapbdc.fri.uniza.sk",
+    "Port": "389"
   },
   "Logging": {
     "IncludeScopes": false,
