--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -32,8 +32,11 @@
   "license": "MIT",
   "dependencies": {
     "@emotion/core": "^10.0.27",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@material-ui/core": "^4.8.0",
     "@material-ui/icons": "^4.5.1",
+    "@mui/material": "^5.10.11",
     "axios": "^0.18.0",
     "classnames": "^2.2.5",
     "connected-react-router": "^6.6.1",
@@ -43,9 +46,9 @@
     "material-color-hash": "^0.1.4",
     "mlcm": "0.0.3",
     "object-assign": "4.1.0",
-    "react": "^16.8.3",
+    "react": "^18.2.0",
     "react-color": "^2.19.3",
-    "react-dom": "^16.8.3",
+    "react-dom": "^18.2.0",
     "react-google-recaptcha": "^2.1.0",
     "react-onclickoutside": "^6.7.1",
     "react-pdf": "^4.1.0",
