--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -37,6 +37,7 @@
     "@material-ui/core": "^4.8.0",
     "@material-ui/icons": "^4.5.1",
     "@mui/material": "^5.10.11",
+    "@reduxjs/toolkit": "^1.8.6",
     "axios": "^0.18.0",
     "classnames": "^2.2.5",
     "connected-react-router": "^6.6.1",
@@ -50,6 +51,7 @@
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^2.1.0",
+    "react-hook-form": "^7.39.1",
     "react-onclickoutside": "^6.7.1",
     "react-pdf": "^4.1.0",
     "react-redux": "^7.1.3",
