--- a/.github/workflows/github_autodeploy_action.yml
+++ b/.github/workflows/github_autodeploy_action.yml
@@ -2,7 +2,7 @@ name: Deploy to AWS ECS
 on:
  push:
   branches:
-   - test-stagging-error
+   - master
 
 env:
  ASPNETCORE_ENVIRONMENT: Production
