conenction string changed

--- a/WebAPI/appsettings.Production.json
+++ b/WebAPI/appsettings.Production.json
@@ -13,7 +13,7 @@
     "BaseUrl": "https://swapify.fri.uniza.sk/"
   },
   "SwapifyDatabaseSettings": {
-    "ConnectionString": "mongodb://mongodb:27017/",
+    "ConnectionString": "mongodb://mongodb-stg:27017/",
     "DatabaseName": "SwapifyDB"
   },
   "LdapSettings": {
