--- a/WebAPI/appsettings.Staging.json
+++ b/WebAPI/appsettings.Staging.json
@@ -14,13 +14,13 @@
     }
   },
   "PathSettings": {
-    "CoursesJsonPath": "/Tests/FixedDB/courses_2022_11_1.json",
+    "CoursesJsonPath": "/Tests/FixedDB/courses_2020_1_29.json",
     "WwwRootPath": "/app/wwwroot"
   },
   "SwapifyDatabaseSettings": {
-    "ConnectionString": "mongodb://mongodb:27017/",
+    "ConnectionString": "mongodb://mongodb-stg:27017/",
     "DatabaseName": "SwapifyDB",
-    "HostName": "mongodb",
+    "HostName": "mongo-stg",
     "Port": "27017"
   }
 }
