--- a/WebAPI/appsettings.Production.json
+++ b/WebAPI/appsettings.Production.json
@@ -13,14 +13,16 @@
     "BaseUrl": "https://swapify.fri.uniza.sk/"
   },
   "SwapifyDatabaseSettings": {
-    "ConnectionString": "mongodb://mongodb-stg:27017/",
-    "DatabaseName": "SwapifyDB"
+    "ConnectionString": "mongodb://mongodb:27017/",
+    "DatabaseName": "SwapifyDB",
+    "HostName": "mongodb",
+    "Port": "27017"
   },
   "LdapSettings": {
     "SecureSocketLayer": "true",
-	"BaseDN": "DC=fri,DC=uniza,DC=sk",
-	"HostName": "ldapbdc.fri.uniza.sk",
-	"Port": "636"
+    "BaseDN": "DC=fri,DC=uniza,DC=sk",
+    "HostName": "ldapbdc.fri.uniza.sk",
+    "Port": "636"
   },
   "PathSettings": {
     "CoursesJsonPath": "/app/courses_2022_11_1.json",
