--- a/WebAPI/appsettings.Staging.json
+++ b/WebAPI/appsettings.Staging.json
@@ -1,9 +1,14 @@
 {
   "LdapSettings": {
-    "SecureSocketLayer": "false",
+    "SecureSocketLayer": "true",
     "BaseDN": "DC=fri,DC=uniza,DC=sk",
     "HostName": "ldapbdc.fri.uniza.sk",
-    "Port": "389"
+    "Port": "636"
+  },
+  "EnvironmentSettings": {
+    "ASPNETCORE_ENVIRONMENT": "Staging",
+    "JwtSecret": "##JWTKEY##",
+    "BaseUrl": "https://swapify.fri.uniza.sk/"
   },
   "Logging": {
     "IncludeScopes": false,
