Fixed more staging labels
last fixes

--- a/WebAPI/appsettings.Staging.json
+++ b/WebAPI/appsettings.Staging.json
@@ -1,9 +1,14 @@
 {
   "LdapSettings": {
-    "SecureSocketLayer": "false",
+    "SecureSocketLayer": "true",
     "BaseDN": "DC=fri,DC=uniza,DC=sk",
     "HostName": "ldapbdc.fri.uniza.sk",
-    "Port": "389"
+    "Port": "636"
+  },
+  "EnvironmentSettings": {
+    "ASPNETCORE_ENVIRONMENT": "Staging",
+    "JwtSecret": "##JWTKEY##",
+    "BaseUrl": "https://swapify.fri.uniza.sk/"
   },
   "Logging": {
     "IncludeScopes": false,
@@ -14,13 +19,13 @@
     }
   },
   "PathSettings": {
-    "CoursesJsonPath": "/Tests/FixedDB/courses_2020_1_29.json",
+    "CoursesJsonPath": "/Tests/FixedDB/courses_2022_11_1.json",
     "WwwRootPath": "/app/wwwroot"
   },
   "SwapifyDatabaseSettings": {
     "ConnectionString": "mongodb://mongodb-stg:27017/",
     "DatabaseName": "SwapifyDB",
-    "HostName": "mongo-stg",
+    "HostName": "mongodb-stg",
     "Port": "27017"
   }
 }
