--- a/.github/workflows/github_autodeploy_action_stage.yml
+++ b/.github/workflows/github_autodeploy_action_stage.yml
@@ -5,7 +5,7 @@ on:
    - develop
 
 env:
- ASPNETCORE_ENVIRONMENT: Production
+ ASPNETCORE_ENVIRONMENT: Staging
 jobs:  
  action_build:
   name: actions_build
