--- a/WebApp/package.json
+++ b/WebApp/package.json
@@ -52,6 +52,7 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-router-redux": "5.0.0-alpha.6",
+    "react-slick": "^0.29.0",
     "react-slideshow-image": "^1.2.0",
     "react-spinners": "^0.8.0",
     "react-swipeable-views": "^0.13.8",
@@ -61,6 +62,7 @@
     "redux-persist-transform-encrypt": "^2.0.1",
     "redux-saga": "^0.16.2",
     "redux-thunk": "2.1.0",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^4.0.3",
     "text-transform": "^0.1.2",
     "throttle-debounce": "^2.1.0",
